integracion con api y busqueda por track

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,26 +1,37 @@
+@import '_normalize';
+@import '_animations';
+
+
 #app {
       font-family: 'Avenir', Helvetica, Arial, sans-serif;
       -webkit-font-smoothing: antialiased;
       -moz-osx-font-smoothing: grayscale;
-      text-align: center;
-      color: #2c3e50;
-      margin-top: 60px;
-      }
+      color: #212121;
+      font-size: 18px;
+}
 
-      h1, h2 {
+h1, h2 {
       font-weight: normal;
-      }
+}
 
-      ul {
+ul {
       list-style-type: none;
       padding: 0;
-      }
+}
 
-      li {
+li {
       display: inline-block;
       margin: 0 10px;
-      }
+}
 
-      a {
-      color: #42b983;
-      }
+img{
+      width: 100%;
+      height: auto;
+}
+a{
+      text-decoration: none;
+      color: #212121;
+}
+*{
+      box-sizing: border-box;
+}
